--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -5,8 +5,10 @@ description = ""
 authors = ["Nicolas Bancel <nicolas.bancel@gmail.com>"]
 
 [tool.poetry.dependencies]
+python = "^3.8"
 pandas = "^1.4.2"
-opencv-python = "^4.6.0.66
+opencv-python = "^4.6.0"
+matplotlib = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.1.2"
