--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^1.4.2"
 opencv-python = "^4.7.0"
 matplotlib = "^3.6.2"
 opencv-contrib-python-rolling = "^5.0.0"
+shapely = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.1.2"
