--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -11,6 +11,8 @@ opencv-python = "^4.7.0"
 matplotlib = "^3.6.2"
 opencv-contrib-python-rolling = "^5.0.0"
 shapely = "^2.0.0"
+sympy = "^1.11.1"
+geopandas = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.1.2"
