--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -13,6 +13,7 @@ opencv-contrib-python-rolling = "^5.0.0"
 shapely = "^2.0.0"
 sympy = "^1.11.1"
 geopandas = "^0.12.2"
+imutils = "^0.5.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.1.2"
